# Job-Matcher-Automation

./: README.md  pyproject.toml
.github/workflows/: scheduled-report.yml
reports/: latest.md
scripts/: generate_latest_report.py
src/job_matcher/: __init__.py  models.py  scoring.py
src/job_matcher/collectors/: __init__.py  airbnb.py  base.py  discord.py  doordash.py  google.py  instacart.py  linkedin.py  meta.py  microsoft.py  notion.py  pinterest.py  reddit.py  snap.py  spotify.py  stripe.py
tests/: test_parsers.py  test_scoring.py
